--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "toastr": "^2.1.4",
     "vue-chartjs": "2.5.4",
     "vue-router": "^2.3.1",
     "vue-strap": "github:wffranco/vue-strap"
